feat: increase readability and modify get api to fetch accounts since user could have multi accounts
